--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,17 @@ jobs:
       - name: Write SSH Keys
         run: |
           install -m 600 -D /dev/null ~/.ssh/id_ed25519
-          echo "${{ secrets.DEPLOY_SSH_KEY }}" > ~/.ssh/id_ed25519
-          ssh-keyscan -H {{ secrets.DEPLOY_SSH_HOST }} > ~/.ssh/known_hosts
+          echo "$DEPLOY_SSH_KEY" > ~/.ssh/id_ed25519
+          ssh-keyscan -H "DEPLOY_SSH_HOST" > ~/.ssh/known_hosts
+        env:
+          DEPLOY_SSH_KEY: ${{secrets.DEPLOY_SSH_KEY}}
+          DEPLOY_SSH_HOST: ${{secrets.DEPLOY_SSH_HOST}}
 
       # Connects to remote server using SSH and copies files using rsync
       - name: Deploy
         run: |
-          ssh -i ~/.ssh/id_ed25519 {{ secrets.DEPLOY_SSH_USER }}@{{ secrets.DEPLOY_SSH_HOST }}
+          ssh -i ~/.ssh/id_ed25519 $DEPLOY_SSH_USER@$DEPLOY_SSH_HOST
           ls /var/www/gutting.net/html
+        env:
+          DEPLOY_SSH_HOST: ${{secrets.DEPLOY_SSH_HOST}}
+          DEPLOY_SSH_USER: ${{secrets.DEPLOY_SSH_USER}}
