--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           install -m 600 -D /dev/null ~/.ssh/id_ed25519
           echo "$DEPLOY_SSH_KEY" > ~/.ssh/id_ed25519
-          ssh-keyscan -H "DEPLOY_SSH_HOST" > ~/.ssh/known_hosts
+          ssh-keyscan -H "$DEPLOY_SSH_HOST" > ~/.ssh/known_hosts
         env:
           DEPLOY_SSH_KEY: ${{secrets.DEPLOY_SSH_KEY}}
           DEPLOY_SSH_HOST: ${{secrets.DEPLOY_SSH_HOST}}
