rename cicd job, refactor remote ls test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -36,8 +36,7 @@ jobs:
       # Connects to remote server using SSH and copies files using rsync
       - name: Deploy
         run: |
-          ssh -i ~/.ssh/id_ed25519 $DEPLOY_SSH_USER@$DEPLOY_SSH_HOST
-          ls /var/www/gutting.net/html
+          ssh -i ~/.ssh/id_ed25519 $DEPLOY_SSH_USER@$DEPLOY_SSH_HOST ls /var/www/gutting.net/html
         env:
           DEPLOY_SSH_HOST: ${{secrets.DEPLOY_SSH_HOST}}
           DEPLOY_SSH_USER: ${{secrets.DEPLOY_SSH_USER}}
